--- a/kursoapp/templates/ingresar.html
+++ b/kursoapp/templates/ingresar.html
@@ -29,7 +29,7 @@
 
                     <tr>
                         <td>
-                            Si no dispone de una cuenta<br>de usuario, puede <a href="/site/registrarse">registrarse.</a>
+                            Si no dispone de una cuenta<br>de usuario, puede <a href="/kurso/registrarse">registrarse.</a>
                         </td>
                         <td align="right">
                             <input class="boton" type="submit" value="Ingresar">
@@ -37,7 +37,7 @@
                     </tr>
                 </table>
             </form>
-            <p class="errorlist">{{mensaje}}</p>
+            <p class="errorlist">{{msj}}</p>
         </div>
         <div class="clr"></div>
     </div>
