--- a/kursoapp/templates/home.html
+++ b/kursoapp/templates/home.html
@@ -1,9 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title></title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block body %}
 {{ parametro }}
-</body>
-</html>
+{% endblock %}
