--- a/kursoapp/templates/ingresar.html
+++ b/kursoapp/templates/ingresar.html
@@ -1,44 +1,24 @@
-
-
-    <div class="article">
-        <h2>{{titulo}}</h2>
-        <p class="infopost">Escriba sus datos para ingresar:</p>
-        <div class="clr"></div>
-        <div class="post_content">
-            {% if form.errors %}
-                <p class="error">Error en el nombre de usuario y/o contraseña</p>
+{% extends 'base.html' %}
+{% block body %}
+    <form method="post" action="{% url ingresar %}" id="login-form">
+        {% csrf_token %}
+        <ul>
+            {{ form.non_field_errors }}
+            {% for field in form %}
+                <li>
+                    {{ field.label_tag }}
+                    {{ field.errors }}
+                    {{ field }}
+                </li>
+            {% endfor %}
+            {% if next %}
+                <input type="hidden" name="next" value="{{ next }}"/>
+            {% else %}
+                <input type="hidden" name="next" value="{% url home %}"/>
             {% endif %}
-            <form method="post" action="">{% csrf_token %}
-                <table>
-                    <tr>
-                        <td>
-                            <label for="email">E-mail:</label>
-                        </td>
-                        <td>
-                            <input type="text" name="email" value="" id="email">
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <label for="password">Contraseña:</label>
-                        </td>
-                        <td>
-                            <input type="password" name="password" value="" id="password">
-                        </td>
-                    </tr>
-
-                    <tr>
-                        <td>
-                            Si no dispone de una cuenta<br>de usuario, puede <a href="/kurso/registrarse">registrarse.</a>
-                        </td>
-                        <td align="right">
-                            <input class="boton" type="submit" value="Ingresar">
-                        </td>
-                    </tr>
-                </table>
-            </form>
-            <p class="errorlist">{{msj}}</p>
-        </div>
-        <div class="clr"></div>
-    </div>
-
+            <li>
+                <input type="submit" class="submit" value="Ingresar" id="sign-in"/>
+            </li>
+        </ul>
+    </form>
+{% endblock %}
