--- a/kursoapp/templates/homepost.html
+++ b/kursoapp/templates/homepost.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block body %}
-    <form method="post" action="{% url homepost %}" id="login-form">
+    <form method="post" action="{% url homepost %}" id="login-form" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
         <input type="submit" class="submit" value="Save" id="sign-in"/>
