--- a/kursoapp/templates/home.html
+++ b/kursoapp/templates/home.html
@@ -1,4 +1,11 @@
 {% extends "base.html" %}
 {% block body %}
-{{ parametro }}
+    {{ parametro }}
+    {% for post in posts %}
+        <hr/>
+        <p>{{ post.author.username }}</p>
+        <img src="{{ post.foto.url }}">
+        <p>{{ post.titulo }}</p>
+        <p>{{ post.texto }}</p>
+    {% endfor %}
 {% endblock %}
